--- a/examples/widget.ipynb
+++ b/examples/widget.ipynb
@@ -18,14 +18,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 1,
    "id": "388d6c6d",
    "metadata": {},
    "outputs": [
     {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\ProgramData\\Anaconda3\\lib\\site-packages\\drawSvg\\raster.py:18: RuntimeWarning: Failed to import CairoSVG. drawSvg will be unable to output PNG or other raster image formats. See https://github.com/cduck/drawSvg#prerequisites for more details.\n",
+      "Original OSError: no library called \"cairo-2\" was found\n",
+      "no library called \"cairo\" was found\n",
+      "no library called \"libcairo-2\" was found\n",
+      "cannot load library 'libcairo.so.2': error 0x7e\n",
+      "cannot load library 'libcairo.2.dylib': error 0x7e\n",
+      "cannot load library 'libcairo-2.dll': error 0x7e\n",
+      "  warnings.warn(msg, RuntimeWarning)\n"
+     ]
+    },
+    {
+     "data": {
+      "application/javascript": "\nrequire.undef('drawingview');\n\ndefine('drawingview', ['@jupyter-widgets/base'], function(widgets) {\n    var DrawingView = widgets.DOMWidgetView.extend({\n        render: function() {\n            this.container = document.createElement('a');\n            this.image_changed();\n            this.container.appendChild(this.svg_view);\n            this.el.appendChild(this.container);\n            this.model.on('change:_image', this.image_changed, this);\n            this.model.on('change:_mousemove_blocked', this.block_changed,\n                          this);\n            this.model.on('change:frame_delay', this.delay_changed,\n                          this);\n            this.model.on('change:_frame_blocked', this.delay_changed,\n                          this);\n            this.model.on('change:disable', this.delay_changed,\n                          this);\n            this.delay_changed();\n        },\n        image_changed: function() {\n            this.container.innerHTML = this.model.get('_image');\n            this.svg_view = this.container.getElementsByTagName('svg')[0];\n            this.cursor_point = this.svg_view.createSVGPoint();\n            this.register_events();\n        },\n        last_move: null,\n        last_mousemove_blocked: null,\n        last_timer: null,\n        block_changed: function() {\n            var widget = this;\n            window.setTimeout(function() {\n                if (widget.model.get('_mousemove_blocked')\n                        != widget.last_mousemove_blocked && widget.last_move) {\n                    widget.send_mouse_event('mousemove', widget.last_move);\n                }\n            }, 0);\n        },\n        send_mouse_event: function(name, e) {\n            this.last_move = null;\n            if (this.model.get('disable')) {\n                return;\n            }\n\n            this.cursor_point.x = e.clientX;\n            this.cursor_point.y = e.clientY;\n            var svg_pt = this.cursor_point.matrixTransform(\n                            this.svg_view.getScreenCTM().inverse());\n\n            this.send({\n                name: name,\n                x: svg_pt.x,\n                y: -svg_pt.y,\n                type: e.type,\n                button: e.button,\n                buttons: e.buttons,\n                shiftKey: e.shiftKey,\n                altKey: e.altKey,\n                ctrlKey: e.ctrlKey,\n                metaKey: e.metaKey,\n                clientX: e.clientX,\n                clientY: e.clientY,\n                movementX: e.movementX,\n                movementY: e.movementY,\n                timeStamp: e.timeStamp,\n                targetId: e.target ? e.target.id : null,\n                currentTargetId: e.currentTarget ? e.currentTarget.id : null,\n                relatedTargetId: e.relatedTarget ? e.relatedTarget.id : null,\n            });\n        },\n        delay_changed: function() {\n            var widget = this;\n            window.clearTimeout(widget.last_timer);\n            if (widget.model.get('disable')) {\n                return;\n            }\n            var delay = widget.model.get('frame_delay');\n            if (delay > 0) {\n                widget.last_timer = window.setTimeout(function() {\n                    widget.send_timed_event('timed');\n                }, delay);\n            }\n        },\n        send_timed_event: function(name) {\n            if (this.model.get('disable')) {\n                return;\n            }\n\n            this.send({\n                name: name,\n            });\n        },\n        register_events: function() {\n            var widget = this;\n            this.svg_view.addEventListener('mousedown', function(e) {\n                e.preventDefault();\n                widget.send_mouse_event('mousedown', e);\n            });\n            this.svg_view.addEventListener('mousemove', function(e) {\n                e.preventDefault();\n                if (widget.model.get('_mousemove_blocked')\n                        == widget.last_mousemove_blocked) {\n                    widget.last_move = e;\n                } else {\n                    widget.send_mouse_event('mousemove', e);\n                }\n            });\n            this.svg_view.addEventListener('mouseup', function(e) {\n                e.preventDefault();\n                widget.send_mouse_event('mouseup', e);\n            });\n        }\n    });\n\n    return {\n        DrawingView: DrawingView\n    };\n});\n",
+      "text/plain": [
+       "<IPython.core.display.Javascript object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "c1cb93b3a23141979ba81d920b7c0559",
+       "model_id": "e7be37a8ddbd403ab2af2f35702a0df3",
        "version_major": 2,
        "version_minor": 0
       },
@@ -47,94 +71,109 @@
     "from Triangle import *\n",
     "from deltaNeigbourhood import *\n",
     "\n",
+    "backgroundStyle = dict(stroke='#cc6500', stroke_width=0.01, fill='#ff7f00')\n",
+    "polyStyle1 = dict(stroke='#793e82', stroke_width=0.005,  fill='#377eb8', fill_opacity=1)\n",
+    "polyStyle2 = dict(stroke='#e94749', stroke_width=0.005, fill='#e41a1c', fill_opacity=0.75)\n",
+    "lineStyle1 = dict(hwidth=0.02, fill='#984ea3')\n",
+    "pointStyle1 = dict(hradius=0.02, fill='#984ea3')\n",
+    "lineStyle2 = dict(hwidth=0.02, fill='#4daf4a')\n",
+    "pointStyle2 = dict(hradius=0.02, fill='#4daf4a')\n",
+    "\n",
     "delta=0.3\n",
-    "click_list=[]\n",
-    "lineStyle2 = dict(stroke_width=0.01, stroke='white', fill='none' #,stroke_dasharray='.02,.02'\n",
-    "                 )\n",
+    "PList=[]\n",
+    "\n",
+    "clicks=0\n",
+    "approximated=False\n",
     "\n",
     "# Create drawing\n",
-    "d = draw.Drawing(2.2, 2.2, origin='center')\n",
+    "d = draw.Drawing(2.4, 2.4, origin='center')\n",
     "d.setRenderSize(500)\n",
-    "d.append(draw.Circle(0, 0, 1, fill='orange',stroke_width=0.01, stroke='black'))\n",
+    "d.append(draw.Circle(0, 0, 1, **backgroundStyle))\n",
     "g=draw.Group()\n",
     "d.append(g)\n",
     "\n",
-    "\n",
-    "\n",
-    "                \n",
-    "def draw_thin_triangle(points):\n",
-    "    for i,x in enumerate(points):\n",
-    "        for y in points[i+1:]:\n",
-    "            p1=Point.fromEuclid(x[0],x[1])\n",
-    "            p2=Point.fromEuclid(y[0],y[1])\n",
-    "            line=Line.fromPoints(*p1,*p2,segment=True)\n",
-    "            g.draw(line, **lineStyle2)\n",
-    "\n",
-    "def draw_thick_line(points):\n",
-    "    for i,x in enumerate(points):\n",
-    "        for y in points[i+1:]:\n",
-    "            p1=Point.fromEuclid(x[0],x[1])\n",
-    "            p2=Point.fromEuclid(y[0],y[1])\n",
-    "            line=Line.fromPoints(*p1,*p2,segment=True)\n",
-    "            g.draw(line, hwidth=0.4,fill='red')\n",
+    "def drawText(text1, text2):\n",
+    "    g.draw(draw.Text(text1, 0.05, 0, 1.1, center=0.7))\n",
+    "    g.draw(draw.Text(text2, 0.05, 0, 1.2, center=0.7))\n",
     "    \n",
-    "def redraw_Mousepoint(points):\n",
-    "    for i,x in enumerate(points):\n",
-    "        p=Point.fromEuclid(x[0],x[1])\n",
-    "        g.draw(Circle.fromCenterRadius(p,0.02),fill='white')\n",
     "\n",
+    "def drawLines(points):\n",
+    "    for i,p1 in enumerate(points):\n",
+    "        g.draw(p1, **pointStyle1)\n",
+    "        for p2 in points[i+1:]:\n",
+    "            g.draw(Line.fromPoints(*p1, *p2, segment=True), **lineStyle1)\n",
     "\n",
+    "def drawTriAndNbh(points, edgeNum):\n",
+    "    global approxdelta\n",
+    "    Tri=Triangle.fromVertices(points)\n",
+    "    approxdelta = Tri.approx()\n",
+    "    if approximated:\n",
+    "        offset = approxdelta\n",
+    "    else:\n",
+    "        offset = delta\n",
+    "    g.draw(Tri,**polyStyle1)\n",
+    "    g.draw(deltaNbh(Tri, offset, edgeNum), **polyStyle2)\n",
     "\n",
-    "def draw_delta_neigbourhood_twosides(points,delta):\n",
-    "    for i,x in enumerate(points):\n",
-    "        p1=Point.fromEuclid(x[0],x[1])\n",
-    "        g.draw(Circle.fromCenterRadius(p1, delta), fill='green',fill_opacity=1)\n",
-    "        for y in points[i+1:]:\n",
-    "            if i==0:\n",
-    "                p2=Point.fromEuclid(y[0],y[1])\n",
-    "                line = Line.fromPoints(*p1, *p2, segment=True)\n",
-    "                g.draw(line, hwidth=2*delta, fill='green',fill_opacity=1)\n",
-    "        \n",
-    "\n",
-    "\n",
-    "clicks=0\n",
+    "text='click inside the circle to add a point'\n",
+    "deltatext='delta = {}'.format(delta)\n",
+    "    \n",
     "        \n",
     "widget = DrawingWidget(d)\n",
     "@widget.mousedown\n",
+    "\n",
     "def mousedown(widget, x, y, info):\n",
-    "        global clicks\n",
+    "    global clicks, approximated\n",
+    "    if (x**2 + y**2) ** 0.5 + 2e-10 < 1:\n",
     "        clicks+=1\n",
-    "        if (x**2 + y**2) ** 0.5 + 2e-10 < 1:\n",
-    "            if clicks<3:\n",
-    "                click_list.append((x, y))\n",
-    "            elif clicks==3:\n",
-    "                click_list.append((x,y))\n",
+    "        if clicks<3:\n",
+    "            PList.append(Point(x, y))\n",
+    "            drawText(text, deltatext)\n",
+    "        elif clicks==3:\n",
+    "            PList.append(Point(x, y))\n",
+    "            g.children.clear()\n",
+    "            drawTriAndNbh(PList, clicks)\n",
+    "            drawText(text, deltatext)\n",
+    "        else:\n",
+    "            g.children.clear()\n",
+    "            drawTriAndNbh(PList, clicks)\n",
+    "            drawText(text, deltatext)       \n",
+    "    else:\n",
+    "        approximated = not approximated\n",
+    "        if len(PList)==3:\n",
+    "            g.children.clear()\n",
+    "            drawTriAndNbh(PList, clicks)\n",
+    "            drawText(text, deltatext)\n",
+    "        else:\n",
+    "            g.children.clear()\n",
+    "            drawLines(PList)\n",
+    "            drawText(text, deltatext)\n",
     "\n",
-    "                PList = []\n",
-    "                for y in click_list:\n",
-    "                    p=Point.fromEuclid(y[0],y[1])\n",
-    "                    PList.append(p)\n",
-    "                Tri=Triangle.fromVertices(PList)\n",
-    "                global delta\n",
-    "                delta = Tri.approx()\n",
-    "\n",
-    "                g.children.clear()\n",
-    "                draw_delta_neigbourhood_twosides(click_list,delta)\n",
-    "                draw_thin_triangle(click_list)\n",
-    "            else:\n",
-    "                g.children.clear()\n",
-    "                draw_delta_neigbourhood_twosides(shift(click_list,clicks),delta)\n",
-    "                draw_thin_triangle(shift(click_list,clicks))\n",
-    "        widget.refresh()\n",
+    "    widget.refresh()\n",
     "        \n",
     "        \n",
     "@widget.mousemove\n",
     "def mousemove(widget, x, y, info):\n",
+    "    global text, deltatext\n",
     "    if (x**2 + y**2) ** 0.5 + 2e-10 < 1:\n",
-    "        if len(click_list)<3:\n",
+    "        if len(PList)<3:\n",
+    "            text='click to add point'\n",
     "            g.children.clear()\n",
-    "            draw_thin_triangle(click_list + [(x, y)])\n",
-    "            redraw_Mousepoint([(x,y)])\n",
+    "            g.draw(Point(x, y),**pointStyle2)\n",
+    "            drawLines([Point(x, y)] + PList)\n",
+    "        else:\n",
+    "            text='click to change edge of deltaneigbourhood'\n",
+    "            g.children.clear()\n",
+    "            drawTriAndNbh(PList, clicks)\n",
+    "        drawText(text, deltatext)    \n",
+    "    else:\n",
+    "        if len(PList)==3:\n",
+    "            if approximated:\n",
+    "                deltatext='click to switch to set delta = {}'.format(delta)\n",
+    "            else:\n",
+    "                deltatext='click to switch to approximated delta = {}'.format(approxdelta)\n",
+    "            g.children.clear()\n",
+    "            drawTriAndNbh(PList, clicks)\n",
+    "            drawText(text, deltatext)\n",
     "    widget.refresh()\n",
     "\n",
     "widget\n"
