--- a/examples/halfplane.ipynb
+++ b/examples/halfplane.ipynb
@@ -2,41 +2,27 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 61,
    "metadata": {},
    "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\ProgramData\\Anaconda3\\lib\\site-packages\\drawSvg\\raster.py:18: RuntimeWarning: Failed to import CairoSVG. drawSvg will be unable to output PNG or other raster image formats. See https://github.com/cduck/drawSvg#prerequisites for more details.\n",
-      "Original OSError: no library called \"cairo-2\" was found\n",
-      "no library called \"cairo\" was found\n",
-      "no library called \"libcairo-2\" was found\n",
-      "cannot load library 'libcairo.so.2': error 0x7e\n",
-      "cannot load library 'libcairo.2.dylib': error 0x7e\n",
-      "cannot load library 'libcairo-2.dll': error 0x7e\n",
-      "  warnings.warn(msg, RuntimeWarning)\n"
-     ]
-    },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "PList = [Ideal(-0.181, 0.984), Ideal(-0.998, -0.064), Ideal(-0.426, -0.905)]\n",
+      "PList = [Point(0.125, 0.727), Point(0.306, -0.806), Point(-0.602, 0.797)]\n",
       "k = 1\n",
-      "Tri is CCW\n",
-      "Tri is delta-slim for delta = 0.8813735870090795\n"
+      "Tri is CW\n",
+      "Tri is not covered for delta = 0.3\n"
      ]
     },
     {
      "data": {
-      "image/svg+xml": "<?xml version=\"1.0\" encoding=\"UTF-8\"?>\n<svg xmlns=\"http://www.w3.org/2000/svg\" xmlns:xlink=\"http://www.w3.org/1999/xlink\"\n     width=\"750\" height=\"416.66666666666663\" viewBox=\"-4.5 -4.9 9 5\">\n<defs>\n</defs>\n<rect x=\"-10\" y=\"-10\" width=\"20\" height=\"10\" fill=\"#ff7f00\" />\n<path d=\"M-10.966646919471195,6.14076283029998e-16 A5.01431337964172,5.01431337964172,0,1,1,-0.9380201601877545,-0.0 A0.35707317492553414,0.35707317492553414,0,1,1,-0.22387381033668496,-3.469446951953612e-17 A5.3713865545672554,5.3713865545672554,0,1,0,-10.966646919471195,1.3628976087218443e-15 Z\" stroke=\"black\" stroke-width=\"0.005\" fill=\"#53565b\" fill-opacity=\"1\" />\n<path d=\"M-0.9380201601877527,1.7763568394002505e-15 A7.091309987425579,7.091309987425579,0,0,0,-10.96664691947107,7.72715225139109e-14 A7.59628771416126,7.59628771416126,0,1,1,-0.22387381033668596,-8.881784197001252e-16 A7.596287714161595,7.596287714161595,0,0,0,-0.6054712283464276,-0.3562300012019106 A7.091309987425823,7.091309987425823,0,0,1,-0.9380201601877536,-0.0 Z\" stroke=\"black\" stroke-width=\"0.005\" fill=\"#ff9e1b\" fill-opacity=\"0.5\" />\n</svg>",
+      "image/svg+xml": "<?xml version=\"1.0\" encoding=\"UTF-8\"?>\n<svg xmlns=\"http://www.w3.org/2000/svg\" xmlns:xlink=\"http://www.w3.org/1999/xlink\"\n     width=\"750\" height=\"416.66666666666663\" viewBox=\"-4.5 -4.7 9 5\">\n<defs>\n</defs>\n<rect x=\"-10\" y=\"-10\" width=\"20\" height=\"10\" stroke=\"#cc6500\" stroke-width=\"0.01\" fill=\"#ff7f00\" />\n<path d=\"M2.773032810524348,-5.056303658184987 A6.229011280771772,6.229011280771772,0,0,0,0.18239951932361986,-0.07651481012569275 A1.583657804383109,1.583657804383109,0,0,0,-2.983055550737909,-0.005914081076658898 A5.0988414988531945,5.0988414988531945,0,0,1,2.773032810524333,-5.056303658184869 Z\" stroke=\"#793e82\" stroke-width=\"0.005\" fill=\"#377eb8\" fill-opacity=\"1\" />\n<path d=\"M0.16003143039913478,-0.07345906702265417 A0.023300312432529027,0.023300312432529027,0,0,0,0.2046080962857806,-0.07293521360044748 A6.51142539673389,6.51142539673389,0,0,1,3.468764800865528,-3.911948556725205 A1.5397470737483487,1.5397470737483487,0,0,0,3.040032169965671,-6.801969868600217 A5.330015396189791,5.330015396189791,0,0,0,-2.9847789783162764,-0.005659487314034983 A0.0018009577048579298,0.0018009577048579298,0,0,0,-2.981333287423241,-0.0056556640401075 A5.330015396189747,5.330015396189747,0,0,1,0.06792967368947656,-3.3682100650216875 A6.511425396733921,6.511425396733921,0,0,0,0.16003143039913503,-0.07345906702265337 Z\" stroke=\"#e94749\" stroke-width=\"0.005\" fill=\"#e41a1c\" fill-opacity=\"0.75\" />\n</svg>",
       "text/plain": [
-       "<drawSvg.drawing.Drawing at 0x1a55863eb80>"
+       "<drawSvg.drawing.Drawing at 0x1b4d65e9ca0>"
       ]
      },
-     "execution_count": 1,
+     "execution_count": 61,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -52,22 +38,24 @@
     "from deltaNeigbourhood import *\n",
     "from Triangle import *\n",
     "\n",
-    "backgroundStyle = dict( fill='#ff7f00', stroke_width=0.01, stroke='#001a30')\n",
-    "polyStyle1 = dict(stroke='black', stroke_width=0.005,  fill='#53565b', fill_opacity=1)\n",
-    "polyStyle2 = dict(stroke='black', stroke_width=0.005, fill='#ff9e1b', fill_opacity=0.5)\n",
+    "backgroundStyle = dict(stroke='#cc6500', stroke_width=0.01, fill='#ff7f00')\n",
+    "polyStyle1 = dict(stroke='#793e82', stroke_width=0.005,  fill='#377eb8', fill_opacity=1)\n",
+    "polyStyle2 = dict(stroke='#e94749', stroke_width=0.005, fill='#e41a1c', fill_opacity=0.75)\n",
+    "lineStyle1 = dict(hwidth=0.02, fill='#984ea3')\n",
+    "lineStyle2 = dict(hwidth=0.02, fill='#4daf4a')\n",
     "\n",
-    "trans= Transform.diskToHalf()\n",
+    "halfplane= Transform.diskToHalf()\n",
     "\n",
-    "d = Drawing(9, 5, origin=(-9/2, -0.1))\n",
-    "d.append(draw.Rectangle(-10, 0, 20, 10, fill='#ff7f00'))\n",
+    "d = Drawing(9, 5, origin=(-9/2, -0.3))\n",
+    "d.append(draw.Rectangle(-10, 0, 20, 10, **backgroundStyle))\n",
     "d.setRenderSize(w=750)\n",
     "\n",
     "\n",
-    "PList=randomPoints(3,3)\n",
+    "PList=randomPoints(3,1)\n",
     "k=random.randint(0,2)\n",
     "#PList=[Ideal.fromDegree(i/3*360) for i in range(2)]\n",
     "\n",
-    "#PList=[Point(-0.381, -0.06), Point(-0.13, 0.123), Point(-0.182, 0.23)]\n",
+    "#PList = [Point(0.125, 0.727), Point(0.306, -0.806), Point(-0.602, 0.797)]\n",
     "#k=0\n",
     "\n",
     "print('PList =', PList)\n",
@@ -76,9 +64,9 @@
     "Tri=Triangle.fromVertices(PList)\n",
     "\n",
     "delta = Tri.approx()\n",
-    "#delta=0.3\n",
-    "d.draw(Tri, transform=trans, stroke='black', stroke_width=0.005,  fill='#53565b', fill_opacity=1)\n",
-    "d.draw(deltaNbh(Tri,delta,k), transform=trans, stroke='black', stroke_width=0.005, fill='#ff9e1b', fill_opacity=0.5)\n",
+    "delta=0.3\n",
+    "d.draw(Tri, transform=halfplane, **polyStyle1)\n",
+    "d.draw(deltaNbh(Tri,delta,k), transform=halfplane, **polyStyle2)\n",
     "\n",
     "if Tri.isCCW():\n",
     "    print('Tri is CCW')\n",
