finalised examples and widget

--- a/examples/halfplane.ipynb
+++ b/examples/halfplane.ipynb
@@ -2,14 +2,14 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 81,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "PList = [Point(0.125, 0.727), Point(0.306, -0.806), Point(-0.602, 0.797)]\n",
+      "PList = [Ideal(0.707, -0.708), Point(-0.86, 0.407), Ideal(-0.098, 0.995)]\n",
       "k = 1\n",
       "Tri is CW\n",
       "Tri is not covered for delta = 0.3\n"
@@ -17,12 +17,12 @@
     },
     {
      "data": {
-      "image/svg+xml": "<?xml version=\"1.0\" encoding=\"UTF-8\"?>\n<svg xmlns=\"http://www.w3.org/2000/svg\" xmlns:xlink=\"http://www.w3.org/1999/xlink\"\n     width=\"750\" height=\"416.66666666666663\" viewBox=\"-4.5 -4.7 9 5\">\n<defs>\n</defs>\n<rect x=\"-10\" y=\"-10\" width=\"20\" height=\"10\" stroke=\"#cc6500\" stroke-width=\"0.01\" fill=\"#ff7f00\" />\n<path d=\"M2.773032810524348,-5.056303658184987 A6.229011280771772,6.229011280771772,0,0,0,0.18239951932361986,-0.07651481012569275 A1.583657804383109,1.583657804383109,0,0,0,-2.983055550737909,-0.005914081076658898 A5.0988414988531945,5.0988414988531945,0,0,1,2.773032810524333,-5.056303658184869 Z\" stroke=\"#793e82\" stroke-width=\"0.005\" fill=\"#377eb8\" fill-opacity=\"1\" />\n<path d=\"M0.16003143039913478,-0.07345906702265417 A0.023300312432529027,0.023300312432529027,0,0,0,0.2046080962857806,-0.07293521360044748 A6.51142539673389,6.51142539673389,0,0,1,3.468764800865528,-3.911948556725205 A1.5397470737483487,1.5397470737483487,0,0,0,3.040032169965671,-6.801969868600217 A5.330015396189791,5.330015396189791,0,0,0,-2.9847789783162764,-0.005659487314034983 A0.0018009577048579298,0.0018009577048579298,0,0,0,-2.981333287423241,-0.0056556640401075 A5.330015396189747,5.330015396189747,0,0,1,0.06792967368947656,-3.3682100650216875 A6.511425396733921,6.511425396733921,0,0,0,0.16003143039913503,-0.07345906702265337 Z\" stroke=\"#e94749\" stroke-width=\"0.005\" fill=\"#e41a1c\" fill-opacity=\"0.75\" />\n</svg>",
+      "image/svg+xml": "<?xml version=\"1.0\" encoding=\"UTF-8\"?>\n<svg xmlns=\"http://www.w3.org/2000/svg\" xmlns:xlink=\"http://www.w3.org/1999/xlink\"\n     width=\"750\" height=\"416.66666666666663\" viewBox=\"-4.5 -4.7 9 5\">\n<defs>\n</defs>\n<rect x=\"-10\" y=\"-10\" width=\"20\" height=\"10\" stroke=\"#cc6500\" stroke-width=\"0.01\" fill=\"#ff7f00\" />\n<path d=\"M0.4138702837718008,5.55111512312578e-17 A0.9973933656909812,0.9973933656909812,0,0,0,-1.5770979860091177,-0.08719194852195769 A9.433342320164629,9.433342320164629,0,0,0,-20.443379662149802,1.3215117049603821e-14 A10.428624972960844,10.428624972960844,0,0,1,0.4138702837718,-7.771561172376102e-16 Z\" stroke=\"#793e82\" stroke-width=\"0.005\" fill=\"#377eb8\" fill-opacity=\"1\" />\n<path d=\"M-1.6030620717702297,-0.08558992720070327 A0.026551717750070463,0.026551717750070463,0,0,0,-1.5524234875579217,-0.08133883648290587 A1.0426136988933923,1.0426136988933923,0,0,1,0.4138702837717999,-6.661338147750939e-16 A10.901443333641945,10.901443333641945,0,1,0,-20.44337966214979,-1.305622276959184e-13 A10.901443333641977,10.901443333641977,0,0,1,-0.02236847969672162,-1.1824465199044094 A1.0426136988933932,1.0426136988933932,0,0,0,-1.6030620717702293,-0.08558992720070224 Z\" stroke=\"#e94749\" stroke-width=\"0.005\" fill=\"#e41a1c\" fill-opacity=\"0.75\" />\n</svg>",
       "text/plain": [
-       "<drawSvg.drawing.Drawing at 0x1b4d65e9ca0>"
+       "<drawSvg.drawing.Drawing at 0x18bd71a7370>"
       ]
      },
-     "execution_count": 61,
+     "execution_count": 81,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -51,7 +51,7 @@
     "d.setRenderSize(w=750)\n",
     "\n",
     "\n",
-    "PList=randomPoints(3,1)\n",
+    "PList=randomPoints(3,2)\n",
     "k=random.randint(0,2)\n",
     "#PList=[Ideal.fromDegree(i/3*360) for i in range(2)]\n",
     "\n",
