--- a/examples/widget.ipynb
+++ b/examples/widget.ipynb
@@ -18,14 +18,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 10,
    "id": "388d6c6d",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "c1cb93b3a23141979ba81d920b7c0559",
+       "model_id": "5699e53d9ab64150a6caf14a84c982f5",
        "version_major": 2,
        "version_minor": 0
       },
@@ -40,103 +40,147 @@
    "source": [
     "import drawSvg as draw\n",
     "from drawSvg.widgets import DrawingWidget\n",
+    "import sys\n",
+    "sys.path.insert(0,\"..\")\n",
     "from hyperbolic.poincare.shapes import *\n",
     "from constructions import *\n",
     "from Triangle import *\n",
     "from deltaNeigbourhood import *\n",
     "\n",
+    "backgroundStyle = dict(stroke='#cc6500', stroke_width=0.01, fill='#ff7f00')\n",
+    "polyStyle1 = dict(stroke='#793e82', stroke_width=0.005,  fill='#377eb8', fill_opacity=1)\n",
+    "polyStyle2 = dict(stroke='#e94749', stroke_width=0.005, fill='#e41a1c', fill_opacity=0.75)\n",
+    "lineStyle1 = dict(hwidth=0.04, fill='#984ea3')\n",
+    "pointStyle1 = dict(hradius=0.02, fill='#984ea3')\n",
+    "lineStyle2 = dict(hwidth=0.04, fill='#4daf4a')\n",
+    "pointStyle2 = dict(hradius=0.02, fill='#4daf4a')\n",
+    "\n",
     "delta=0.3\n",
-    "click_list=[]\n",
-    "lineStyle2 = dict(stroke_width=0.01, stroke='white', fill='none' #,stroke_dasharray='.02,.02'\n",
-    "                 )\n",
+    "PList=[]\n",
+    "\n",
+    "clicks=0\n",
+    "approximated=False\n",
     "\n",
     "# Create drawing\n",
-    "d = draw.Drawing(2.2, 2.2, origin='center')\n",
+    "d = draw.Drawing(2.1, 2.5, origin='center')\n",
     "d.setRenderSize(500)\n",
-    "d.append(draw.Circle(0, 0, 1, fill='orange',stroke_width=0.01, stroke='black'))\n",
+    "d.append(draw.Circle(0, 0, 1, **backgroundStyle))\n",
     "g=draw.Group()\n",
     "d.append(g)\n",
     "\n",
-    "\n",
-    "\n",
-    "                \n",
-    "def draw_thin_triangle(points):\n",
-    "    for i,x in enumerate(points):\n",
-    "        for y in points[i+1:]:\n",
-    "            p1=Point.fromEuclid(x[0],x[1])\n",
-    "            p2=Point.fromEuclid(y[0],y[1])\n",
-    "            line=Line.fromPoints(*p1,*p2,segment=True)\n",
-    "            g.draw(line, **lineStyle2)\n",
-    "\n",
-    "def draw_thick_line(points):\n",
-    "    for i,x in enumerate(points):\n",
-    "        for y in points[i+1:]:\n",
-    "            p1=Point.fromEuclid(x[0],x[1])\n",
-    "            p2=Point.fromEuclid(y[0],y[1])\n",
-    "            line=Line.fromPoints(*p1,*p2,segment=True)\n",
-    "            g.draw(line, hwidth=0.4,fill='red')\n",
+    "def drawText(text1, text2):\n",
+    "    g.draw(draw.Text(text1, 0.1, 0, 1.1, center=0.7))\n",
+    "    g.draw(draw.Text(text2, 0.1, 0, 1.2, center=0.7))\n",
     "    \n",
-    "def redraw_Mousepoint(points):\n",
-    "    for i,x in enumerate(points):\n",
-    "        p=Point.fromEuclid(x[0],x[1])\n",
-    "        g.draw(Circle.fromCenterRadius(p,0.02),fill='white')\n",
     "\n",
+    "def drawLines(points):\n",
+    "    for i,p1 in enumerate(points):\n",
+    "        for p2 in points[i+1:]:\n",
+    "            g.draw(Line.fromPoints(*p1, *p2, segment=True), **lineStyle1)\n",
+    "    for p1 in points:\n",
+    "        g.draw(p1, **pointStyle2)\n",
     "\n",
+    "def drawTriAndNbh(points, edgeNum):\n",
+    "    global approxdelta\n",
+    "    Tri=Triangle.fromVertices(points)\n",
+    "    if clicks==3:\n",
+    "        approxdelta = Tri.approx()\n",
+    "    if approximated:\n",
+    "        offset = approxdelta\n",
+    "    else:\n",
+    "        offset = delta\n",
+    "    g.draw(Tri,**polyStyle1)\n",
+    "    g.draw(deltaNbh(Tri, offset, edgeNum), **polyStyle2)\n",
     "\n",
-    "def draw_delta_neigbourhood_twosides(points,delta):\n",
-    "    for i,x in enumerate(points):\n",
-    "        p1=Point.fromEuclid(x[0],x[1])\n",
-    "        g.draw(Circle.fromCenterRadius(p1, delta), fill='green',fill_opacity=1)\n",
-    "        for y in points[i+1:]:\n",
-    "            if i==0:\n",
-    "                p2=Point.fromEuclid(y[0],y[1])\n",
-    "                line = Line.fromPoints(*p1, *p2, segment=True)\n",
-    "                g.draw(line, hwidth=2*delta, fill='green',fill_opacity=1)\n",
-    "        \n",
-    "\n",
-    "\n",
-    "clicks=0\n",
+    "text='click inside the circle to add a point'\n",
+    "deltatext='delta is set to = {}'.format(delta)\n",
+    "    \n",
     "        \n",
     "widget = DrawingWidget(d)\n",
     "@widget.mousedown\n",
+    "\n",
     "def mousedown(widget, x, y, info):\n",
-    "        global clicks\n",
+    "    global clicks, approximated\n",
+    "    if (x**2 + y**2) ** 0.5 + 2e-10 < 1:\n",
     "        clicks+=1\n",
-    "        if (x**2 + y**2) ** 0.5 + 2e-10 < 1:\n",
-    "            if clicks<3:\n",
-    "                click_list.append((x, y))\n",
-    "            elif clicks==3:\n",
-    "                click_list.append((x,y))\n",
+    "        if clicks<3:\n",
+    "            PList.append(Point(x, y))\n",
+    "            g.children.clear()\n",
+    "            drawLines(PList)\n",
+    "            drawText(text, deltatext)\n",
+    "        elif clicks==3:\n",
+    "            PList.append(Point(x, y))\n",
+    "            g.children.clear()\n",
+    "            drawTriAndNbh(PList, clicks)\n",
+    "            drawText(text, deltatext)\n",
+    "        else:\n",
+    "            g.children.clear()\n",
+    "            drawTriAndNbh(PList, clicks)\n",
+    "            drawText(text, deltatext)       \n",
+    "    else:\n",
+    "        approximated = not approximated\n",
+    "        if len(PList)==3:\n",
+    "            g.children.clear()\n",
+    "            drawTriAndNbh(PList, clicks)\n",
+    "            drawText(text, deltatext)\n",
+    "        else:\n",
+    "            g.children.clear()\n",
+    "            drawLines(PList)\n",
+    "            drawText(text, deltatext)\n",
     "\n",
-    "                PList = []\n",
-    "                for y in click_list:\n",
-    "                    p=Point.fromEuclid(y[0],y[1])\n",
-    "                    PList.append(p)\n",
-    "                Tri=Triangle.fromVertices(PList)\n",
-    "                global delta\n",
-    "                delta = Tri.approx()\n",
-    "\n",
-    "                g.children.clear()\n",
-    "                draw_delta_neigbourhood_twosides(click_list,delta)\n",
-    "                draw_thin_triangle(click_list)\n",
-    "            else:\n",
-    "                g.children.clear()\n",
-    "                draw_delta_neigbourhood_twosides(shift(click_list,clicks),delta)\n",
-    "                draw_thin_triangle(shift(click_list,clicks))\n",
-    "        widget.refresh()\n",
+    "    widget.refresh()\n",
     "        \n",
     "        \n",
     "@widget.mousemove\n",
     "def mousemove(widget, x, y, info):\n",
+    "    global text, deltatext\n",
     "    if (x**2 + y**2) ** 0.5 + 2e-10 < 1:\n",
-    "        if len(click_list)<3:\n",
+    "        if len(PList)<3:\n",
+    "            text='click to add point'\n",
     "            g.children.clear()\n",
-    "            draw_thin_triangle(click_list + [(x, y)])\n",
-    "            redraw_Mousepoint([(x,y)])\n",
+    "            g.draw(Point(x, y),**pointStyle2)\n",
+    "            drawLines([Point(x, y)] + PList)\n",
+    "            drawText(text, deltatext)\n",
+    "        else:\n",
+    "            text='click to change edge of deltaneigbourhood'\n",
+    "            g.children.clear()\n",
+    "            drawTriAndNbh(PList, clicks)\n",
+    "            drawText(text, deltatext)    \n",
+    "    else:\n",
+    "        if len(PList)==3:\n",
+    "            if approximated:\n",
+    "                text='click to change to set delta'\n",
+    "                deltatext='approximated delta = {}'.format(approxdelta)\n",
+    "            else:\n",
+    "                text='click to change to approximated delta'\n",
+    "                deltatext='set delta = {}'.format(delta)\n",
+    "            g.children.clear()\n",
+    "            drawTriAndNbh(PList, clicks)\n",
+    "            drawText(text, deltatext)\n",
+    "        else:\n",
+    "            text='click inside the circle to add a point'\n",
+    "            g.children.clear()\n",
+    "            drawLines(PList)\n",
+    "            drawText(text, deltatext)\n",
+    "\n",
     "    widget.refresh()\n",
     "\n",
     "widget\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -144,7 +188,7 @@
    "hash": "aee8b7b246df8f9039afb4144a1f6fd8d2ca17a180786b69acc140d282b71a49"
   },
   "kernelspec": {
-   "display_name": "Python 3.10.0 64-bit",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -159,8 +203,7 @@
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
    "version": "3.9.7"
-  },
-  "orig_nbformat": 4
+  }
  },
  "nbformat": 4,
  "nbformat_minor": 2
