--- a/test_code_drawing.ipynb
+++ b/test_code_drawing.ipynb
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 54,
    "id": "a719b7da",
    "metadata": {},
    "outputs": [
@@ -34,20 +34,20 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "PList = [Point(-0.084, 0.134), Point(0.797, 0.335), Point(-0.45, -0.86)]\n",
-      "k = 0\n",
+      "PList = [Point(-0.142, 0.127), Ideal(0.667, -0.745), Point(0.407, -0.813)]\n",
+      "k = 2\n",
       "Tri is CW\n",
-      "Tri is delta-slim for delta = 0.3\n"
+      "Tri is not covered for delta = 0.3\n"
      ]
     },
     {
      "data": {
-      "image/svg+xml": "<?xml version=\"1.0\" encoding=\"UTF-8\"?>\n<svg xmlns=\"http://www.w3.org/2000/svg\" xmlns:xlink=\"http://www.w3.org/1999/xlink\"\n     width=\"750\" height=\"750.0\" viewBox=\"-1.05 -1.05 2.1 2.1\">\n<defs>\n</defs>\n<circle cx=\"0\" cy=\"0\" r=\"1\" fill=\"#ff7f00\" stroke-width=\"0.01\" stroke=\"#001a30\" />\n<path d=\"M-0.0844416420053456,-0.13408079992560662 A3.4493066427441796,3.4493066427441796,0,0,0,0.7969971712481276,-0.3349491732542549 A2.7968772665587607,2.7968772665587607,0,0,0,-0.4504064405958528,0.8604427844624243 A4.323054417116918,4.323054417116918,0,0,0,-0.08444164200534665,-0.1340807999256065 Z\" stroke=\"black\" stroke-width=\"0.005\" fill=\"#53565b\" fill-opacity=\"1\" />\n<path d=\"M0.05983083288589598,-0.10289706058176407 A0.14522764896448012,0.14522764896448012,0,0,0,-0.2228750972545353,-0.1688434172952702 A14.280119767428138,14.280119767428138,0,0,0,-0.4583075463426489,0.8577186407624735 A0.008633040969441896,0.008633040969441896,0,0,0,-0.443686829797712,0.8654048889835647 A19.715438773263728,19.715438773263728,0,0,1,0.8172154634501094,-0.30389366930094575 A0.03824261652113506,0.03824261652113506,0,0,0,0.7851345110168179,-0.3705766484567561 A1.5789135565275407,1.5789135565275407,0,0,0,0.03620261105983236,0.0011248947499216122 A1.9508472295480974,1.9508472295480974,0,0,0,0.059830832885894525,-0.1028970605817644 Z\" stroke=\"black\" stroke-width=\"0.005\" fill=\"#ff9e1b\" fill-opacity=\"0.5\" />\n</svg>",
+      "image/svg+xml": "<?xml version=\"1.0\" encoding=\"UTF-8\"?>\n<svg xmlns=\"http://www.w3.org/2000/svg\" xmlns:xlink=\"http://www.w3.org/1999/xlink\"\n     width=\"500\" height=\"500.0\" viewBox=\"-1.05 -1.05 2.1 2.1\">\n<defs>\n</defs>\n<circle cx=\"0\" cy=\"0\" r=\"1\" stroke=\"#cc6500\" stroke-width=\"0.01\" fill=\"#ff7f00\" />\n<path d=\"M-0.1421871590719057,-0.12663930833092607 A33.069930281735836,33.069930281735836,0,0,1,0.667316310938542,0.7447744230002584 A0.15135747663591229,0.15135747663591229,0,0,0,0.40685817166811866,0.8128437319757725 A9.875128347748236,9.875128347748236,0,0,0,-0.14218715907190216,-0.12663930833093495 Z\" stroke=\"#793e82\" stroke-width=\"0.005\" fill=\"#377eb8\" fill-opacity=\"1\" />\n<path d=\"M0.3789113874123121,0.8098956807672033 A0.026351633931458555,0.026351633931458555,0,0,0,0.42940740841348124,0.820209457274931 A0.16586474173420673,0.16586474173420673,0,0,1,0.6673163109385438,0.7447744230002608 A3.1226576460449356,3.1226576460449356,0,0,0,-0.04151554156223858,-0.22923979944333484 A0.14360265714331985,0.14360265714331985,0,0,0,-0.2480336736298461,-0.03030774376008738 A3.8111907454030725,3.8111907454030725,0,0,0,0.529581998616123,0.6572647962251215 A0.15124853929572882,0.15124853929572882,0,0,0,0.3789113874123121,0.8098956807672033 Z\" stroke=\"#e94749\" stroke-width=\"0.005\" fill=\"#e41a1c\" fill-opacity=\"0.75\" />\n<path d=\"M-0.7110982911880546,-0.7030926114456275 A3.036937746459401,3.036937746459401,0,0,1,0.6673163109384892,0.7447744230003126 A3.2139325336806235,3.2139325336806235,0,0,0,-0.7110982911880499,-0.7030926114456255 Z\" fill=\"#984ea3\" />\n<path d=\"M0.6673163109385449,0.7447744230002606 A0.1666330206177096,0.1666330206177096,0,0,0,0.4170207847917698,0.9088969496327163 A0.16511636658748957,0.16511636658748957,0,0,1,0.667316310938545,0.7447744230002608 Z\" fill=\"#984ea3\" />\n<path d=\"M0.44801015661926247,0.8940284668655614 A4.9055474705448985,4.9055474705448985,0,0,1,-0.6181439818966261,-0.7860648940418269 A5.405867095290933,5.405867095290933,0,0,0,0.44801015661926336,0.8940284668655614 Z\" fill=\"#984ea3\" />\n<path d=\"M-0.7110982911879513,-0.7030926114457305 A3.9506278021408288,3.9506278021408288,0,0,0,0.6673163109385962,0.7447744230002149 A3.681951058492849,3.681951058492849,0,0,1,-0.7110982911879522,-0.7030926114457308 Z\" fill=\"#4daf4a\" />\n<path d=\"M0.6673163109385443,0.7447744230002613 A0.15104361067708183,0.15104361067708183,0,1,0,0.4170207847917702,0.9088969496327161 A0.15146728563523948,0.15146728563523948,0,1,1,0.6673163109385443,0.7447744230002613 Z\" fill=\"#4daf4a\" />\n<path d=\"M0.4480101566192545,0.8940284668655645 A2.636536848575819,2.636536848575819,0,0,0,-0.6181439818966306,-0.7860648940418202 A2.518743553207572,2.518743553207572,0,0,1,0.4480101566192549,0.8940284668655636 Z\" fill=\"#4daf4a\" />\n</svg>",
       "text/plain": [
-       "<drawSvg.drawing.Drawing at 0x1f1c78f9df0>"
+       "<drawSvg.drawing.Drawing at 0x1af6fd3b970>"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 54,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -60,12 +60,17 @@
     "from hyperbolic.poincare.shapes import *\n",
     "from Triangle import *\n",
     "\n",
-    "d = draw.Drawing(2.1, 2.1, origin='center')\n",
-    "d.setRenderSize(750)\n",
-    "d.append(draw.Circle(0, 0, 1, fill='#ff7f00', stroke_width=0.01, stroke='#001a30'))\n",
+    "backgroundStyle = dict(stroke='#cc6500', stroke_width=0.01, fill='#ff7f00')\n",
+    "polyStyle1 = dict(stroke='#793e82', stroke_width=0.005,  fill='#377eb8', fill_opacity=1)\n",
+    "polyStyle2 = dict(stroke='#e94749', stroke_width=0.005, fill='#e41a1c', fill_opacity=0.75)\n",
+    "lineStyle1 = dict(hwidth=0.02, fill='#984ea3')\n",
+    "lineStyle2 = dict(hwidth=0.02, fill='#4daf4a')\n",
     "\n",
-    "PList=randomPoints(3)\n",
-    "#PList=[Ideal.fromDegree(i/3*360) for i in range(2)]\n",
+    "d = draw.Drawing(2.1, 2.1, origin='center')\n",
+    "d.setRenderSize(500)\n",
+    "d.append(draw.Circle(0, 0, 1, **backgroundStyle))\n",
+    "\n",
+    "PList=randomPoints(3,1)\n",
     "\n",
     "#PList=[Point(-0.381, -0.06), Point(-0.13, 0.123), Point(-0.182, 0.23)]\n",
     "\n",
@@ -78,8 +83,15 @@
     "\n",
     "delta = Tri.approx()\n",
     "delta=0.3\n",
-    "d.draw(Tri, stroke='black', stroke_width=0.005,  fill='#53565b', fill_opacity=1)\n",
-    "d.draw(deltaNbh(Tri,delta,k), stroke='black',stroke_width=0.005, fill='#ff9e1b', fill_opacity=0.5)\n",
+    "d.draw(Tri, **polyStyle1)\n",
+    "d.draw(deltaNbh(Tri,delta,k),**polyStyle2)\n",
+    "\n",
+    "\n",
+    "for i,e in enumerate(Tri.edges):\n",
+    "    d.draw(Tri.offsetEdge(i, delta, False), **lineStyle1)\n",
+    "\n",
+    "for i,e in enumerate(Tri.edges):\n",
+    "    d.draw(Tri.offsetEdge(i, delta, inner=True), **lineStyle2)\n",
     "\n",
     "\n",
     "if Tri.isCCW():\n",
