--- a/examples/widget.ipynb
+++ b/examples/widget.ipynb
@@ -18,14 +18,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 4,
    "id": "388d6c6d",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "5699e53d9ab64150a6caf14a84c982f5",
+       "model_id": "d3b5e0da0e3b4f34a9113564d9011876",
        "version_major": 2,
        "version_minor": 0
       },
@@ -119,6 +119,12 @@
     "            drawText(text, deltatext)       \n",
     "    else:\n",
     "        approximated = not approximated\n",
+    "        if approximated:\n",
+    "            text='click to change to set delta'\n",
+    "            deltatext='approximated delta = {}'.format(approxdelta)\n",
+    "        else:\n",
+    "            text='click to change to approximated delta'\n",
+    "            deltatext='set delta = {}'.format(delta)\n",
     "        if len(PList)==3:\n",
     "            g.children.clear()\n",
     "            drawTriAndNbh(PList, clicks)\n",
